<resources>
    <string name="app_name">StrooperPro</string>
    <string name="Jugar">Jugar</string>
    <string name="Puntuacion">Puntuacion</string>
    <string name="configuracion">Configuración</string>
    <string name="menu">Menú</string>
    <string name="palabrascorrectas">Palabras Correctas</string>
    <string name="palabrasincorrectas">Palabras Incorrectas</string>
    <string name="intentos">Intentos</string>
    <string name="salir">Salir</string>
</resources>
