<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controllers.Resumen">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txtcorrectasR"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingVertical="20dp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/palabrascorrectas"
            android:paddingVertical="20dp"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txtincorrectasR"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingVertical="20dp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:text="@string/palabrasincorrectas"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingVertical="20dp"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txtintentosR"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingVertical="20dp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/intentos"
            android:paddingVertical="20dp"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btntwitter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingVertical="20dp"
             />

        <ImageButton
            android:id="@+id/btnfacebook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingVertical="20dp"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/btnregresarIC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/btnregresarC"
            android:text="@string/menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>



</LinearLayout>